udn-with-pod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: udn
---
apiVersion: v1
kind: Pod
metadata:
  name: server
  namespace: demo
spec:
  containers:
  - args:
    - netexec
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
