anp-deny-egress-test.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: deny-egress-test
spec:
  priority: 10
  subject:
    namespaces: 
      matchLabels:
        kubernetes.io/metadata.name: test
  egress:
  - action: Deny
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test
