anp-deny-ingress-test.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: deny-ingress-test
spec:
  priority: 10
  subject:
    namespaces: 
      matchLabels:
        kubernetes.io/metadata.name: test
  ingress:
  - action: Deny
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test
