egressfirewall-allow-all.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: test
spec:
  egress:
  - type: Allow
    to:
      cidrSelector: 0.0.0.0/0
