netpol-egress-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-allow-all
  namespace: test
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock: 
        cidr: 0.0.0.0/0
  policyTypes:
    - Egress
