netpol-egress-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-deny-all
  namespace: test
spec:
  podSelector: {}
  policyTypes:
    - egress
