netpol-ingress-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny-all
  namespace: test
spec:
  podSelector: {}
  policyTypes:
    - Ingress
